See the commit log at https://github.com/librenms/librenms/commits/master for details.