@@ -2,15 +2,14 @@
 <?php
 
 /**
- * LibreNMS
+ * Observium
  *
- *   This file is part of LibreNMS
+ *   This file is part of Observium.
  *
- * @package    librenms
- * @subpackage cli
- * @author     LibreNMS Group <librenms-project@google.groups.com>
- * @copyright  (C) 2006 - 2012 Adam Armstrong (as Observium)
- * @copyright  (C) 2013 LibreNMS Group
+ * @package    observium
+ * @subpackage alerts
+ * @author     Adam Armstrong <adama@memetic.org>
+ * @copyright  (C) 2006 - 2012 Adam Armstrong
  *
  */
 
