@@ -1,1 +1,3 @@
-See the commit log at https://github.com/librenms/librenms/commits/master for details.
+Please check http://www.observium.org/wiki/Changelog for an up to date changelog.
+
+You can also browse the subversion repository commit logs for more granular updates.
